# ml-workshop-26

./: README.md  pyproject.toml
exercises/: 01.2 - python_intro_ex.ipynb  01.3 - ml_intro_ex.ipynb  02.1 - knn_ex.ipynb  02.2 - model_eval_ex.ipynb  03.1 - linear_regression_ex.ipynb  03.2 - matrix_ex.ipynb  03.3 - dirty_data_ex.ipynb  04.1 - decision_trees_ex.ipynb  04.1 - decision_trees_intro_ex.ipynb  04.1 - decision_trees_part_1_ex.ipynb  04.2 - decision_trees_part_2_ex.ipynb  04.2 - decision_trees_sklearn_ex.ipynb  05.1 - logistic_regression_ex.ipynb  05.2 - stochastic_gradient_decent_ex.ipynb  06.1 - neural_networks_ex.ipynb  06.2 - neural_networks_pytorch_ex.ipynb  README.md
lectures/: 01.1 - python_intro.ipynb  01.2 - ml_intro.ipynb  02.1 - classification_intro.ipynb  02.2 - model_eval.ipynb  03.1 - linear_regression.ipynb  03.3 - model_eval_revisit.ipynb  03.4 - dirty_data.ipynb  04.1 - decision_trees_intro.ipynb  04.2 - drzewa_decyzyjne_sklearn.ipynb  05.1 - logistic_regression.ipynb  06.1 - neural_networks_intro.ipynb  06.2 - pyTorch_and_nn_basics.ipynb  README.md  cheatsheet.ipynb
