[tool.poetry]
name = "ml-workshop-25"
version = "0.1.0"
description = ""
authors = ["kabanosk <56364007+Kabanosk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
transformers = "^4.50.2"
torch = "^2.6.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
